--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,5 +2,5 @@ site_name: MkLorum
 site_url: https://example.com/
 nav:
   - Home: index.md
-  - About: about.md
+  - Links: materials.md
 theme: readthedocs
